Upate request generator.

--- a/openaz-xacml-test/src/test/resources/testsets/healthcare/xacml.properties
+++ b/openaz-xacml-test/src/test/resources/testsets/healthcare/xacml.properties
@@ -24,4 +24,4 @@ xacml.openaz.policyFinderFactory=org.apache.openaz.xacml.pdp.std.StdPolicyFinder
 # Policies to load
 #
 xacml.rootPolicies=healthcare
-healthcare.file=src/test/resources/testsets/healthcare/policyset.xml
+healthcare.file=/Users/okielabackend/XACML-SMT/Research/alfa-project/alfa-project/src-gen/health_care.HealthCarePsPatientRecord.xml
