--- a/openaz-xacml-test/pom.xml
+++ b/openaz-xacml-test/pom.xml
@@ -80,5 +80,9 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
         </dependency>
+        <dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		</dependency>
     </dependencies>
 </project>
